<?xml version="1.0" encoding="utf-8"?>
<android.widget.ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".grocery_activity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/brinjal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/grocery_chillipowder" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chillipowdername"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:text="@string/chillipowderkg"
                    android:textSize="26sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/vegqty"
                android:layout_width="50sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="QTY"
                android:inputType="number"
                android:textSize="25sp" />

            <Button
                android:id="@+id/vegbuy"
                android:layout_width="62dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buy" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/brinjal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/grocery_oriddal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/oriddalname"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:text="@string/oriddalkg"
                    android:textSize="26sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/vegqty"
                android:layout_width="50sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="QTY"
                android:inputType="number"
                android:textSize="25sp" />

            <Button
                android:id="@+id/vegbuy"
                android:layout_width="62dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buy" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/brinjal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/grocery_peanut" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/peanutname"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:text="@string/peanutkg"
                    android:textSize="26sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/vegqty"
                android:layout_width="50sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="QTY"
                android:inputType="number"
                android:textSize="25sp" />

            <Button
                android:id="@+id/vegbuy"
                android:layout_width="62dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buy" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/brinjal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/grocery_pepper" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/peppername"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:text="@string/pepperkg"
                    android:textSize="26sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/vegqty"
                android:layout_width="50sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="QTY"
                android:inputType="number"
                android:textSize="25sp" />

            <Button
                android:id="@+id/vegbuy"
                android:layout_width="62dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buy" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/brinjal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/grocery_rice" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ricename"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:text="@string/ricekg"
                    android:textSize="26sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/vegqty"
                android:layout_width="50sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="QTY"
                android:inputType="number"
                android:textSize="25sp" />

            <Button
                android:id="@+id/vegbuy"
                android:layout_width="62dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buy" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/brinjal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/grocery_salt" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saltname"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:text="@string/saltkg"
                    android:textSize="26sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/vegqty"
                android:layout_width="50sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="QTY"
                android:inputType="number"
                android:textSize="25sp" />

            <Button
                android:id="@+id/vegbuy"
                android:layout_width="62dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buy" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/brinjal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/grocery_sunfloweroil" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sunfloweroilname"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:text="@string/sunfloweroilkg"
                    android:textSize="26sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/vegqty"
                android:layout_width="50sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="QTY"
                android:inputType="number"
                android:textSize="25sp" />

            <Button
                android:id="@+id/vegbuy"
                android:layout_width="62dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buy" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/brinjal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/grocery_toordal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/toordalname"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:text="@string/toordalkg"
                    android:textSize="26sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/vegqty"
                android:layout_width="50sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="QTY"
                android:inputType="number"
                android:textSize="25sp" />

            <Button
                android:id="@+id/vegbuy"
                android:layout_width="62dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buy" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/brinjal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/grocery_turmeric" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/turmericname"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:text="@string/turmerickg"
                    android:textSize="26sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/vegqty"
                android:layout_width="50sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="QTY"
                android:inputType="number"
                android:textSize="25sp" />

            <Button
                android:id="@+id/vegbuy"
                android:layout_width="62dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buy" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/brinjal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/grocery_wheat" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wheatname"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:text="@string/wheatkg"
                    android:textSize="26sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/vegqty"
                android:layout_width="50sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="QTY"
                android:inputType="number"
                android:textSize="25sp" />

            <Button
                android:id="@+id/vegbuy"
                android:layout_width="62dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buy" />
        </LinearLayout>

    </LinearLayout>

</android.widget.ScrollView>